@@ -452,8 +452,8 @@ if [[ -z ${opts} ]] ; then
 fi
 
 svc_homegrown() {
-	local arg=$1
-	local x=
+	local x arg=$1
+	shift
 
 	# Walk through the list of available options, looking for the
 	# requested one.
@@ -467,9 +467,11 @@ svc_homegrown() {
 			fi
 		fi
 	done
+	x=""
 
 	# If we're here, then the function wasn't in $opts.
-	eerror "ERROR:  wrong args. (  "${arg}" / $* )"
+	[[ -n $* ]] && x="/ $* "
+	eerror "ERROR: wrong args ( "${arg}" ${x})"
 	# Do not quote this either ...
 	usage ${opts}
 	exit 1
